# Video2tasks

./: .gitignore  CLEANUP.md  LICENSE  Op_CN.md  README.md  README_CN.md  TASKS_SUMMARY.md  cleanup_gpu1.sh  config.example.yaml  config.vqa.example.yaml  config.vqa.yaml  config.yaml  dataset_tasks.yaml  logs_gpu1_seg.out  pyproject.toml  run_serial_gpu1.sh  server_A_pi0_final.py  worker_B_pi0_final.py
.sisyphus/: boulder.json
.sisyphus/plans/: robot-video-segmentor-open-source.md
pids/: v2t-server.vqa.pid  v2t-worker.vqa.pid
src/robot_video_segmentor/: py.typed
src/robot_video_segmentor/cli/: __init__.py  server.py  validate_config.py
src/robot_video_segmentor/vlm/: __init__.py  dummy.py  qwen3vl.py
src/robot_video_segmentor/worker/: __init__.py
src/video2tasks/: __init__.py  config.py  prompt.py
src/video2tasks/cli/: server.py  validate_config.py  worker.py
src/video2tasks/cot/: __init__.py  prompt.py  server_app.py  worker_runner.py
src/video2tasks/prompt/: __init__.py  common.py  loader.py  preview_prompt.py
src/video2tasks/prompt/cot/: __init__.py
src/video2tasks/prompt/cot/task00001/: __init__.py  blocks.py  builder.py  examples.py
src/video2tasks/prompt/cot/task00002/: __init__.py  blocks.py  builder.py  examples.py
src/video2tasks/prompt/cot/task00003/: builder.py
src/video2tasks/prompt/cot/task00004/: builder.py
src/video2tasks/prompt/cot/task00005/: builder.py
src/video2tasks/prompt/cot/task00006/: builder.py
src/video2tasks/prompt/cot/task00007/: builder.py
src/video2tasks/prompt/cot/task00008/: builder.py
src/video2tasks/prompt/cot/task00009/: builder.py
src/video2tasks/prompt/cot/task00010/: builder.py
src/video2tasks/prompt/cot/task00011/: builder.py
src/video2tasks/prompt/cot/task00012/: builder.py
src/video2tasks/prompt/cot/task00013/: builder.py
src/video2tasks/prompt/seg/: __init__.py
src/video2tasks/prompt/vlm/: __init__.py  adapter.py  question_bank_shared.py
src/video2tasks/server/: __init__.py  app.py  windowing.py
src/video2tasks/vlm/: __init__.py  base.py  dummy.py  factory.py  qwen3vl.py  remote_api.py
src/video2tasks/vqa/: __init__.py  job_builder.py  prompts.py  runner.py  server_app.py  types.py  worker_runner.py  writer.py
src/video2tasks/worker/: runner.py
(+45 files in other folders)
