[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-video-segmentor"
version = "0.1.0"
description = "Distributed video segmentation for robotic manipulation using VLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robot Video Segmentor Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
qwen3vl = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pillow>=10.0.0",
    "accelerate>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
rvs-server = "robot_video_segmentor.cli.server:main"
rvs-worker = "robot_video_segmentor.cli.worker:main"
rvs-validate-config = "robot_video_segmentor.cli.validate_config:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/robot-video-segmentor"
Repository = "https://github.com/YOUR_USERNAME/robot-video-segmentor"
Issues = "https://github.com/YOUR_USERNAME/robot-video-segmentor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robot_video_segmentor = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true